--- a/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
+++ b/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem title="Item" id="4CE-E7-0CY"/>
+                                    <barButtonItem systemItem="action" id="4CE-E7-0CY"/>
                                 </items>
                             </toolbar>
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="upY-TN-CEw">
