--- a/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
+++ b/IOS/GearsGameCenter/GearsGameCenter/Base.lproj/Main_iPhone.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L05-NO-Zql">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L05-NO-Zql">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
@@ -33,13 +33,24 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="upY-TN-CEw">
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="upY-TN-CEw">
                                 <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="504" id="BLg-NL-WF3"/>
+                                </constraints>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="upY-TN-CEw" firstAttribute="trailing" secondItem="L05-NO-Zql" secondAttribute="trailing" id="2mo-eq-gN4"/>
+                            <constraint firstItem="upY-TN-CEw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="48n-hX-iu4"/>
+                            <constraint firstItem="upY-TN-CEw" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" symbolic="YES" id="NFA-Jo-SpJ"/>
+                            <constraint firstAttribute="trailing" secondItem="upY-TN-CEw" secondAttribute="trailing" id="a5A-kh-89e"/>
+                            <constraint firstItem="upY-TN-CEw" firstAttribute="leading" secondItem="L05-NO-Zql" secondAttribute="leading" id="eU6-Ur-HA1"/>
+                            <constraint firstItem="upY-TN-CEw" firstAttribute="bottom" secondItem="L05-NO-Zql" secondAttribute="top" id="ul9-K2-sYi"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="shareButton" destination="4CE-E7-0CY" id="vs7-Qv-TZX"/>
