--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/720.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/720.css
@@ -13,12 +13,22 @@
 }
 .btn-center
 {
+	font-size: 40px;
+	color: #5c6d66;
 	margin-top: 10px;
-	margin-left: 5%;
-	width: 80%;
-	height: 80px;  
+	outline: 0;
+	border: 0px;
+	width: 544px;
+	height: 74px;  
+	background-color: transparent;
+	background-image: url("../img/button.png");
+	background-repeat: no-repeat;
 	
 
+}
+.btn-center:hover{
+	background-image: url("../img/select.png");
+	
 }
 .stage {
 	padding-top: 340px;
@@ -29,14 +39,19 @@ label{
 	width:10%;
 }
 #Username{
+	/*font-family: "stencil";*/
+	font-size: 40px;
 	outline: none;
 	border: 0px;
 	background-color: transparent;;
-	min-width: 600px;
-	height: 40px;
-	width:70%;
+	min-width: 544px;
+	height: 74px;
+	width:100%;
+	padding-left: 250px;
 }
 .NameHolder{
-
-	margin-left: 5%;
+	width: 544px;
+	height: 74px;
+	background-repeat: no-repeat;
+	background-image: url("../img/name.png");
 }
