--- a/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/980.css
+++ b/IOS/GearsGameCenter/GearsGameCenter/Games/WhoIs/css/980.css
@@ -28,6 +28,10 @@
 	
 
 }
+li.selected{
+	border:4px solid red;
+	width: 900px
+}
 .btn-center:hover{
 	background-image: url("../img/select_980.png");
 	
